<resources>
    <string name="app_name">quiz app</string>
    <string name="app_head">Grammar Test</string>
    <string name="name_of_student">Name</string>
    <string name="class_of_student">Class</string>
    <string name="questions_head">- Choose the correct answer/answers:</string>
    <string name="question1">Q1/The children_______to the park today.</string>
    <string name="ans1.1">take</string>
    <string name="ans1.2">taken</string>
    <string name="ans1.3">took</string>
    <string name="ans1.4">are being taken</string>
    <string name="question2">Q2/They should also get them_______off their mobile phones when they go to sleep.</string>
    <string name="ans2.1">turning</string>
    <string name="ans2.2">to turn</string>
    <string name="ans2.3">turn</string>
    <string name="ans2.4">turned</string>
    <string name="question3">Q3/What two things does every sentence need?</string>
    <string name="ans3.1">Person</string>
    <string name="ans3.2">Verb/Predicate</string>
    <string name="ans3.3">Subject</string>
    <string name="ans3.4">Cat</string>
    <string name="question4">Q4/He said that when he_______to the museum, he had seen the statues.</string>
    <string name="ans4.1">is</string>
    <string name="ans4.2">has been</string>
    <string name="ans4.3">\'llbe</string>
    <string name="ans4.4">had been</string>
    <string name="question5">Q5/My coach said that he_______be at the next game.</string>
    <string name="ans5.1">isn’t able to</string>
    <string name="ans5.2">would not be able to</string>
    <string name="ans5.3">won’t be able to</string>
    <string name="ans5.4">able to</string>
    <string name="question6">Q6/We’ve moved to a new house so you_______come round and see it.</string>
    <string name="ans6.1">need</string>
    <string name="ans6.2">don\'t need</string>
    <string name="ans6.3">have</string>
    <string name="ans6.4">must</string>
    <string name="question7">-What is the past of choose ?</string>
    <string name="ans7_hint">Write your answer here</string>
    <string name="ans7">chose</string>
    <string name="submit">Submit</string>
</resources>