<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Heading -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:padding="5dp"
            android:text="@string/app_head"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Student info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/background_grey"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name_of_student"
                android:hint="@string/name_of_student"
                android:inputType="text"
                android:padding="5dp" />

            <EditText
                android:id="@+id/student_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/class_of_student"
                android:hint="@string/class_of_student"
                android:inputType="text"
                android:padding="5dp" />

        </LinearLayout>

        <!-- Questions -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/background_grey"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:text="@string/questions_head"
                android:textSize="36sp"
                android:textStyle="bold" />

            <!-- Question -->
            <LinearLayout style="@style/question_wrap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1.1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1.2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1.3" />

                    <RadioButton
                        android:id="@+id/ans_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1.4" />
                </RadioGroup>

            </LinearLayout>

            <!-- Question -->
            <LinearLayout style="@style/question_wrap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2.1" />

                    <RadioButton
                        android:id="@+id/ans_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2.2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2.3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2.4" />
                </RadioGroup>

            </LinearLayout>

            <!-- Question -->
            <LinearLayout style="@style/question_wrap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/ans_3.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans3.1" />

                <CheckBox
                    android:id="@+id/ans_3.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans3.2" />

                <CheckBox
                    android:id="@+id/ans_3.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans3.3" />

                <CheckBox
                    android:id="@+id/ans_3.4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans3.4" />
            </LinearLayout>

            <!-- Question -->
            <LinearLayout style="@style/question_wrap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4.1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4.2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4.3" />

                    <RadioButton
                        android:id="@+id/ans_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4.4" />
                </RadioGroup>

            </LinearLayout>

            <!-- Question -->
            <LinearLayout style="@style/question_wrap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5.1" />

                    <RadioButton
                        android:id="@+id/ans_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5.2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5.3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5.4" />
                </RadioGroup>

            </LinearLayout>

            <!-- Question -->
            <LinearLayout style="@style/question_wrap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans6.1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans6.2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans6.3" />

                    <RadioButton
                        android:id="@+id/ans_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans6.4" />
                </RadioGroup>

            </LinearLayout>

            <!-- Question -->
            <LinearLayout style="@style/question_wrap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="24dp"
                    android:text="@string/question7"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ans_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/ans7_hint"
                    android:hint="@string/ans7_hint"
                    android:inputType="text"
                    android:padding="5dp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submit"
                android:text="@string/submit"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>